[package]
name = "poa-ballot-stats"
version = "0.4.0"
authors = ["Andreas Fackler <AndreasFackler@gmx.de>"]
description = "Read POA voting records and rank voters by how many ballots they missed."
edition = "2018"

[dependencies]
clap = "2.33.0"
colored = "1.9.3"
error-chain = { version = "0.12", default-features = false }
ethabi = "12.0.0"
ethabi-contract = "11.0.0"
ethabi-derive = "12.0.0"
parse_duration = "2.1.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
web3 = { version = "0.10.0", default-features = false, features = ["http", "tls"] }